# strava2gpkg

./: .gitignore  Dockerfile  Dockerfile-01  README.md  Untitled.ipynb  fit2gpx.py  gds_py.yml  main.py  pyproject.toml  strava_2024-01-19.gpkg  utils.py
.ipynb_checkpoints/: main-checkpoint.py
notebooks/: pre-process.ipynb
notebooks/.ipynb_checkpoints/: pre-process-checkpoint.ipynb
